Updated pdf module

--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -112,6 +112,9 @@
     <Reference Include="Ranorex.Plugin.Wpf">
       <Private>False</Private>
     </Reference>
+    <Reference Include="Ranorex.ReportToPDF">
+      <HintPath>..\packages\Ranorex.ReportToPDF.1.0.15\lib\net40\Ranorex.ReportToPDF.exe</HintPath>
+    </Reference>
     <Reference Include="System">
     </Reference>
     <Reference Include="System.Core">
@@ -3043,9 +3046,6 @@
       <id>7779be84-f5d1-4581-9275-227d5fef234f</id>
       <recordtableid>c31fd7d3-6ab8-4b02-8d6c-eda02646b5c9</recordtableid>
     </None>
-    <None Include="packages.config">
-      <id>cac0812a-bd0c-4414-a1e1-b00886e6caec</id>
-    </None>
     <Content Include="PopulationConnector.csv">
       <Link>PopulationConnector.csv</Link>
       <BoundTo>9ccfdd11-47ca-413a-8c8e-82d3c005a4eb</BoundTo>
@@ -3053,6 +3053,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <id>f1f67e9f-6e13-4582-a234-d4028b266090</id>
     </Content>
+    <None Include="packages.config">
+      <id>ff38b7e4-eade-4902-8b07-d22712a87c1b</id>
+    </None>
     <None Include="ParticipantsPage\Change_Enroll_Status.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>da209583-813a-4fd9-81ed-298e286b68c3</id>
