fixed automation helper dependancies

--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -112,9 +112,6 @@
     <Reference Include="Ranorex.Plugin.Wpf">
       <Private>False</Private>
     </Reference>
-    <Reference Include="Ranorex.ReportToPDF">
-      <HintPath>..\packages\Ranorex.ReportToPDF.1.0.15\lib\net40\Ranorex.ReportToPDF.exe</HintPath>
-    </Reference>
     <Reference Include="System">
     </Reference>
     <Reference Include="System.Core">
@@ -1972,6 +1969,27 @@
     <Compile Include="StudiesPage\Validate_Sponsor_Descending.cs">
       <id>f3c073fd-7f56-4a1f-856b-fd1199268875</id>
     </Compile>
+    <Compile Include="UserCodeCollections\DragNDropLibrary.cs">
+      <id>19f9a2c7-334d-4309-9a0a-38d719aaf5c6</id>
+    </Compile>
+    <Compile Include="UserCodeCollections\FileLibrary.cs">
+      <id>4ce3c280-3217-4100-8379-b03605fa2499</id>
+    </Compile>
+    <Compile Include="UserCodeCollections\PopupWatcherLibrary.cs">
+      <id>4096c6ab-a541-4df3-848b-cf28c0232b67</id>
+    </Compile>
+    <Compile Include="UserCodeCollections\StringLibrary.cs">
+      <id>d3098f93-0d66-42ed-8421-f18c71d7b260</id>
+    </Compile>
+    <Compile Include="UserCodeCollections\SystemLibrary.cs">
+      <id>bb4ffc69-403c-4cff-98a5-8e4854774a94</id>
+    </Compile>
+    <Compile Include="UserCodeCollections\ValidationLibrary.cs">
+      <id>dbcb86dd-7fdc-4446-9ba1-0a3423ad84f4</id>
+    </Compile>
+    <Compile Include="UserCodeCollections\WebLibrary.cs">
+      <id>07c66336-8d78-4caf-b85b-c7136e8c3a3e</id>
+    </Compile>
     <Compile Include="UsersPage\Click_Edit_Button.cs">
       <BoundTo>914c1416-79c0-41a3-a04a-266b40aab533</BoundTo>
       <DependentUpon>Click_Edit_Button.rxrec</DependentUpon>
@@ -3046,6 +3064,9 @@
       <id>7779be84-f5d1-4581-9275-227d5fef234f</id>
       <recordtableid>c31fd7d3-6ab8-4b02-8d6c-eda02646b5c9</recordtableid>
     </None>
+    <None Include="packages.config">
+      <id>cac0812a-bd0c-4414-a1e1-b00886e6caec</id>
+    </None>
     <Content Include="PopulationConnector.csv">
       <Link>PopulationConnector.csv</Link>
       <BoundTo>9ccfdd11-47ca-413a-8c8e-82d3c005a4eb</BoundTo>
@@ -3053,9 +3074,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <id>f1f67e9f-6e13-4582-a234-d4028b266090</id>
     </Content>
-    <None Include="packages.config">
-      <id>ff38b7e4-eade-4902-8b07-d22712a87c1b</id>
-    </None>
     <None Include="ParticipantsPage\Change_Enroll_Status.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>da209583-813a-4fd9-81ed-298e286b68c3</id>
@@ -3433,6 +3451,9 @@
     </Folder>
     <Folder Include="ParticipantsPage">
       <id>eaf99ce1-d0ee-42ca-b3f5-df2b652d7516</id>
+    </Folder>
+    <Folder Include="UserCodeCollections">
+      <id>c80f3d71-ee92-4e89-9c61-c5053332a538</id>
     </Folder>
     <Folder Include="UsersPage">
       <id>2585d631-e37a-4bd2-8fe1-9317e9fc8485</id>
