--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -2436,6 +2436,26 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <id>5557dfe9-aeaa-4f75-b63c-6f8429c7e07c</id>
     </Content>
+    <Content Include="CustomReportTemplate\RanorexReport.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>072770ec-e694-4e59-9ab9-0f9b0428800b</id>
+    </Content>
+    <Content Include="CustomReportTemplate\RanorexReport.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>8a7e9fb6-e6a6-48b2-b9cc-108f751ef2d8</id>
+    </Content>
+    <Content Include="CustomReportTemplate\RanorexReport.xsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>f2ba39b7-6a75-4650-9b1c-04be87bfbbf8</id>
+    </Content>
+    <Content Include="CustomReportTemplate\View.rxlog">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>d1486682-f92a-4a88-a227-278b9cf203b5</id>
+    </Content>
+    <Content Include="CustomReportTemplate\View.rxlog.data">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>abca6f53-4a64-46d8-b722-9733104501f2</id>
+    </Content>
     <None Include="AddBatteryPage\Clear_BatteryName_Field.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>6fbf54df-9657-4d36-b2aa-c7010e2a289a</id>
@@ -2900,6 +2920,9 @@
       <id>e9238413-dfe5-43e4-a9b2-e4d0fe27e428</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\Baseline.csv">
+      <id>70a03c02-cdec-4f43-b0e6-212bf2c9ab71</id>
+    </None>
     <None Include="csv\extract1.csv">
       <id>7833311f-d735-4268-a53a-5ca69a633d41</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -2908,6 +2931,13 @@
       <id>f0ed9925-6644-4717-a502-ce44c0526ff5</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\FollowUp.csv">
+      <id>ab2c1665-1439-489e-8d03-af44e0e360b1</id>
+    </None>
+    <Content Include="CustomReportTemplate\CogstateLogoWhite.png">
+      <id>13458f0b-9c1b-4178-8f93-c5604045c620</id>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="ExtractsPage\Click_DownloadExtract_Button.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>4f4a5e80-6031-406a-aca2-bf906a5d93c7</id>
@@ -3206,6 +3236,12 @@
       <id>5720740b-c0c2-45b9-bc6d-cd2391b3c543</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="rawData\Baseline.txt">
+      <id>929ec6a6-26b1-4feb-b158-b6651e6aad11</id>
+    </None>
+    <None Include="rawData\FollowUp.txt">
+      <id>abfa05ce-faaf-4835-ac0f-a9de2c65e92c</id>
+    </None>
     <None Include="rawData\rawData1.txt">
       <id>28c81b25-cf62-4d20-b771-9257a1bffe7e</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -3501,6 +3537,10 @@
     </Folder>
     <Folder Include="ExtractsPage">
       <id>bd83b410-bd36-4887-86fc-8de10ba18e20</id>
+    </Folder>
+    <Folder Include="CustomReportTemplate">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>05bfde2f-8c9e-42b4-a28c-10db17e94407</id>
     </Folder>
     <Folder Include="ParticipantsPage">
       <id>eaf99ce1-d0ee-42ca-b3f5-df2b652d7516</id>
