Added ability to select any BatteryPopulation option and re arranged the regression tests to be more flexible, allowing for muktiple batteries and workflows to be added to the one study

--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -193,6 +193,18 @@
       <UserCode>true</UserCode>
       <id>a463e76a-7c81-4bb1-a5c9-9bea26702cb7</id>
     </Compile>
+    <Compile Include="AddBatteryPage\Click_ResponseOptions_Checkbox.cs">
+      <BoundTo>efaaa8a4-e1ba-4976-b844-1731ac6fcad5</BoundTo>
+      <DependentUpon>Click_ResponseOptions_Checkbox.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>09c277c9-7e8d-44f2-917e-7ccabe8458e3</id>
+    </Compile>
+    <Compile Include="AddBatteryPage\Click_ResponseOptions_Checkbox.UserCode.cs">
+      <BoundTo>efaaa8a4-e1ba-4976-b844-1731ac6fcad5</BoundTo>
+      <DependentUpon>Click_ResponseOptions_Checkbox.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>c6c1270a-b926-4c05-9181-0bd0c755fcb3</id>
+    </Compile>
     <Compile Include="AddBatteryPage\Enter_BatteryDescription.cs">
       <DependentUpon>Enter_BatteryDescription.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
@@ -241,14 +253,14 @@
       <id>ded892a9-1d00-4b2f-b5d3-08c19648ca7f</id>
       <BoundTo>4952e5e7-b087-425d-9961-eff752aaaa50</BoundTo>
     </Compile>
-    <Compile Include="AddBatteryPage\Enter_Healthy_BatteryPopulation.cs">
-      <DependentUpon>Enter_Healthy_BatteryPopulation.rxrec</DependentUpon>
+    <Compile Include="AddBatteryPage\Enter_BatteryPopulation.cs">
+      <DependentUpon>Enter_BatteryPopulation.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>d547630b-a74f-4908-b6fd-b7f95e657fdd</id>
       <BoundTo>0138c44a-1b8a-4e44-82a6-5ad10406a2c1</BoundTo>
     </Compile>
-    <Compile Include="AddBatteryPage\Enter_Healthy_BatteryPopulation.UserCode.cs">
-      <DependentUpon>Enter_Healthy_BatteryPopulation.rxrec</DependentUpon>
+    <Compile Include="AddBatteryPage\Enter_BatteryPopulation.UserCode.cs">
+      <DependentUpon>Enter_BatteryPopulation.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>2616f14f-50c6-4254-ae82-b74a0596ef2d</id>
       <BoundTo>0138c44a-1b8a-4e44-82a6-5ad10406a2c1</BoundTo>
@@ -2481,6 +2493,11 @@
       <id>06b60d6d-e779-48cd-8ba2-cc5224a92982</id>
       <recordtableid>545119d5-ad94-47a3-8dc5-73a30b181f28</recordtableid>
     </None>
+    <None Include="AddBatteryPage\Click_ResponseOptions_Checkbox.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>efaaa8a4-e1ba-4976-b844-1731ac6fcad5</id>
+      <recordtableid>89539dc9-b02b-489b-ade4-df904874dac3</recordtableid>
+    </None>
     <None Include="AddBatteryPage\Enter_BatteryDescription.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>434665e1-ae4d-4111-af4f-058b1d6cbfbb</id>
@@ -2501,7 +2518,7 @@
       <id>4952e5e7-b087-425d-9961-eff752aaaa50</id>
       <recordtableid>4a19ca31-0752-4236-9479-f775e863b5b3</recordtableid>
     </None>
-    <None Include="AddBatteryPage\Enter_Healthy_BatteryPopulation.rxrec">
+    <None Include="AddBatteryPage\Enter_BatteryPopulation.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>0138c44a-1b8a-4e44-82a6-5ad10406a2c1</id>
       <recordtableid>bf386df6-7470-4bdb-a22c-c83c0cd68c78</recordtableid>
